--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
             <div style="margin:1em;">
               <div class="btn-group">
-                <a href="javascript:showList();" class="btn btn-info">图书列表</a>
-                <a href="javascript:showForm();" class="btn btn-info">图书添加</a>
+                <a href="javascript:showList();" class="btn btn-primary">图书列表</a>
+                <a href="javascript:showForm();" class="btn btn-danger">图书添加</a>
               </div>
             </div>
 
